--- a/NLayer.Web/Views/Products/Index.cshtml
+++ b/NLayer.Web/Views/Products/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Product Table</h1>
 <a class="btn btn-primary" asp-controller="Products" asp-action="Save" >Save Product</a>
 <table class="table table-striped">
     <thead>
